--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <ng-container *ngIf="currentUser$ | async as user">
+    <ng-container *ngIf="currentUser$ | async as user; else defaultLinks">
       <ng-container *ngIf="user.role === 'Administrator'; else customerLinks">
         <a *ngFor="let it of adminNav()" [routerLink]="it.route" routerLinkActive="active" class="nav-item" [title]="it.label">
           <span class="material-icons nav-icon">{{ it.icon }}</span>
@@ -19,6 +19,13 @@
         </a>
       </ng-template>
     </ng-container>
+
+    <ng-template #defaultLinks>
+      <a *ngFor="let it of adminNav()" [routerLink]="it.route" routerLinkActive="active" class="nav-item" [title]="it.label">
+        <span class="material-icons nav-icon">{{ it.icon }}</span>
+        <span class="nav-label" *ngIf="!isCollapsed">{{ it.label }}</span>
+      </a>
+    </ng-template>
   </nav>
 
   <div class="sidebar-footer">
